Sort files by name on playing folder with mplayer